--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@ h1 {
     color: $blueviolet;
 }
 
-div {
+.div {
     background: $cadetblue;
 
     > p {
@@ -39,5 +39,185 @@ h3 {
     main {
         max-width: none;
     }
+}
+//flex column
+.flecole0 {
+    color: $cadetblue;
+    text-align: center;
+    background: $aquamarine;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    max-width: 240px;
+    margin-left: 50px;
+    position: relative;
+    float: left;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+.flecoau0 {
+    color: $cadetblue;
+    text-align: center;
+    background: $aquamarine;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    max-width: 240px;
+    margin: 0 auto;
+    position: relative;
+    float: none;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+//flex column
+.flecori50 {
+    color: $cadetblue;
+    text-align: center;
+    background: $aquamarine;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    max-width: 260px;
+    margin-right: 50px;
+    position: relative;
+    float: right;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+
+//flex row
+.fleroau {
+    color: rebeccapurple;
+    text-align: center;
+    background: $cadetblue;
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    max-width: 260px;
+    margin: 0 auto;
+    padding-top: 100px;
+    position: relative;
+    float: none;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+.flerole {
+    color: rebeccapurple;
+    text-align: center;
+    background-color: darksalmon;
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    max-width: 260px;
+    margin: 0 auto;
+    padding-left: 100px;
+    position: relative;
+    float: left;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+.flerori {
+    color: rebeccapurple;
+    text-align: center;
+    background: $cadetblue;
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    max-width: 260px;
+    margin: 0 auto;
+    padding-right: 100px;
+    position: relative;
+    float: right;
+    height: 20vh;
+    width: 50%;
+
+    > p {
+        color: #fff;
+    }
+}
+
+.footer {
+    color: rebeccapurple;
+    text-align: center;
+    background-color:indianred;
+    display: flex;
+    flex-direction: row;
+    padding: 1em;
+    max-width: 900px;
+    margin: 0 auto;
+    padding-right: 100px;
+    position: relative;
+    float: right;
+    height: 20vh;
+    width: 80%;
+
+    > p {
+        color: #fff;
+    }
+}
+
+
+////////v3
+nav {
+    border-bottom: 1px solid rgba(255, 62, 0, 0.1);
+    font-weight: 300;
+    padding: 0 1em;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+/* clearfix */
+ul::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+li {
+    display: block;
+    float: left;
+}
+
+.selected {
+    position: relative;
+    display: inline-block;
+}
+
+.selected::after {
+    position: absolute;
+    content: "";
+    width: calc(100% - 1em);
+    height: 2px;
+    background-color: rgb(255, 62, 0);
+    display: block;
+    bottom: -1px;
+}
+
+a {
+    text-decoration: none;
+    padding: 1em 0.5em;
+    display: block;
 }
 
